@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-28T01:50:07Z",
+  "timestamp" : "2022-08-28T16:19:46Z",
   "count_outdated" : 490,
   "uniques_outdated" : 283,
-  "count" : 510,
-  "uniques" : 295,
+  "count" : 511,
+  "uniques" : 296,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
