@@ -1,3 +1,11 @@
+2022-08-28T16:19:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2943718306
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 490 / 295 510
+* notice: next accum: outdated-unq outdated-all / unq all: 283 490 / 296 511
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-28]
+
 2022-08-28T01:50:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2941359147
 * notice: last 14d: unq all: 5 20
